--- a/app/views/admin/topics/edit.html.erb
+++ b/app/views/admin/topics/edit.html.erb
@@ -17,7 +17,7 @@
             <tr>
               <td width="7%">主題名稱：</td>
               <td width="93%">
-               <%= f.text_field :name %>
+               <%= f.text_field :name, class: 'text' %>
             </tr>
             <tr>
               <td>&nbsp;</td>
