--- a/app/views/admin/communities/custom_edit.html.erb
+++ b/app/views/admin/communities/custom_edit.html.erb
@@ -4,7 +4,7 @@
 </header>
 <article>
   <div class="hgroup">
-    <h3 class="left">CKE 編輯</h3>
+    <h3 class="left">編輯社群迴響</h3>
     <%= form_for(@community, :url => custom_edit_admin_community_path(@community), html: { id: "patchthiscommunity", :multipart => true } ) do |f| %>
     <div class="right">
       顯示 <%= f.check_box :status, { class: 'checkbox'  }, "enable", "disable" %>
