--- a/app/views/admin/communities/index.html.erb
+++ b/app/views/admin/communities/index.html.erb
@@ -8,7 +8,7 @@
       <!-- Peditor<img src="/images/admin/add.png"> -->
     <%# end %>
     <%= link_to admin_communities_path(type: "CustomizedCommunity"), :method => :post , class:"right highlight" do %>
-      CKEditor<img src="/images/admin/add.png">
+      New<img src="/images/admin/add.png">
     <% end %>
   </div>
   <div class="list">
@@ -24,7 +24,7 @@
           <td width="15%" align="right"><%= community.created_at.strftime("%Y年%m月%d日")%></td>
           <td width="12%">
             <div class="tool">
-              <%= list_edit_btn(community) %><%= link_to("", admin_community_path(community), :method => :delete, :data => {:confirm => "確定刪除？"}, class: "delete") %>
+              <%# list_edit_btn(community) %><%= link_to("", admin_community_path(community), :method => :delete, :data => {:confirm => "確定刪除？"}, class: "delete") %>
             </div>
           </td>
         </tr>
