--- a/app/views/admin/topics/new.html.erb
+++ b/app/views/admin/topics/new.html.erb
@@ -10,7 +10,7 @@
             <tr>
               <td width="7%">主題名稱：</td>
               <td width="31%">
-               <%= f.text_field :name %>
+               <%= f.text_field :name, class: 'text' %>
               </td>
               <td width="2%">&nbsp;</td>
               <td width="7%">&nbsp;</td>
