fix some minor typo

--- a/app/views/admin/announcements/custom_edit.html.erb
+++ b/app/views/admin/announcements/custom_edit.html.erb
@@ -60,7 +60,7 @@
         </td>
       </tr>
       <tr>
-        <td width="7%">CKEditor：</td>
+        <td width="7%">內容：</td>
         <td width="93%">
           <%= f.cktext_area :ck_context, :class => 'someclass', :ckeditor => {:language => 'zh-tw'} %>
         </td>
