--- a/app/views/admin/communities/edit.html.erb
+++ b/app/views/admin/communities/edit.html.erb
@@ -88,7 +88,7 @@
 
   <div class="button"> 
     <%= link_to image_tag("/images/admin/left.png")+"返回", admin_communities_path(), class: "left" %>
-    <a href="javascript: document.getElementById('patchthiscommunity').submit();" class="right highlight" data-no-turbolink = true >儲存<img src="<%= image_path("save.png") %>"></a>
+    <a href="javascript: document.getElementById('patchthiscommunity').submit();" class="right highlight" data-no-turbolink = true >儲存<img src="<%= image_path("/images/admin/save.png") %>"></a>
   </div>
 </article>
 
