change admin products nav seg.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -105,7 +105,7 @@
       </div><!-- End .prodCon 中間白色文字介紹區 -->
       
       <div class="lg-margin"></div><!-- Space 間隔-->
-      <% if @measurements.count > 1 %>
+      <% if @measurements.count >= 1 %>
       <div class="tableSize"><!-- Start .tableSize 中間黑色尺寸區 -->
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="table table-bordered">
           <tr>
