--- a/app/views/common/_search_form.html.erb
+++ b/app/views/common/_search_form.html.erb
@@ -1,7 +1,7 @@
 <% @q = Product.where(status: 'enable').search() %>
 <%= search_form_for @q, url: search_products_path, class: "form-inline quick-search-form" , method: :post  do |f| %>
     <div class='form-group'>
-      <%= f.search_field :name_cont, class: "form-control", placeholder: "Search here" %>
+      <%= f.search_field :name_or_en_name_cont, class: "form-control", placeholder: "Search here" %>
     </div>
     <%= f.submit('' , id: "quick-search", class: "btn btn-custom") %>
  <% end %>
