--- a/app/views/products/_fake_add_to_cart.html.erb
+++ b/app/views/products/_fake_add_to_cart.html.erb
@@ -26,5 +26,5 @@
     <% end %>
   <% else %>
     <%= link_to '', useradmin_tracking_lists_path, class: "icon-button icon-like" %>
-    <!-- <a class='inline icon-button icon-fb' href="#inline_content">FB</a> -->
   <% end %>
+  <div class="fb-like" data-href="<%= request.original_url %>" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
