--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -14,6 +14,7 @@
         <div class="row">
           <img id="bannerImg" src=<%= "#{@topic.galleries.select{ |v| v['type'] == 'TopicBannerGallery' }.first.attachment.url}" %>>
           <img id="bannerFrame" src="/images/frame_bannerPickup.png">
+          <div class="fb-like" data-href="<%= request.original_url %>" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
         </div>
       </div>
     </div>
