--- a/app/views/useradmin/tracking_lists/index.html.erb
+++ b/app/views/useradmin/tracking_lists/index.html.erb
@@ -46,7 +46,7 @@
                   <span class="item-price-original">NT$  <%= number_with_delimiter(current_product.price) %></span> 
                   <span class="item-price-sale">NT$ <%= number_with_delimiter(current_product.price_for_sale) %></span>
                   <div class="item-action"> 
-                    <%= link_to '取消追蹤', useradmin_tracking_list_path(tracking_item), :method => :delete, :data => {:confirm => "確認取消追蹤？"}, class: "favDelete" %>
+                    <%= link_to '', useradmin_tracking_list_path(tracking_item), :method => :delete, :data => {:confirm => "確認取消追蹤？"}, class: "favDelete icon-cancel" %>
                     <a class='inline icon-button icon-compare pdquickview' data-pd='<%= current_product.id %>' ></a> 
                   </div>
                 </div><!-- End .item-meta-container -->   
