--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -162,6 +162,7 @@ h3.title span { font-size: 20px; padding: 0; margin-top: 5px; }
 .flex-active-slide{margin-right:20px;}
 .item-action {text-align: right;}
 #content .related-product img{height:100px;width:100px;}
+.accordion-header li.active {background-color: #fff799;}
 @media \0screen {
 .item > .item-image-container .item-price-container .item-price { padding-top: 15px;line-height:0px;  }
 }
