--- a/public/css/pageAccount.css
+++ b/public/css/pageAccount.css
@@ -115,7 +115,7 @@
 #personal.input-group .input-group-addon { width: 125px; border-radius: 2px 0 0 2px; padding: 0px 10px; line-height: 44px; min-width: 125px; }
 #personal .input-group { width: 85%; }
 
-.input-group > p{line-height:47px;padding: 0 0 0 20px; margin: 0;}
+.input-group > p{line-height:47px;padding: 0 0 0 20px; margin: 0;background-color: #dcdcdc;}
 
 @media (min-width: 992px) and (max-width: 1200px) {
 #personal .input-group select.form-control { width: 23%; }
@@ -141,11 +141,11 @@
 #address p { padding-bottom: 20px; padding-bottom: 0 20px;}
 #address .input-group { float: left; width: 100%;height:44px; }
 #address .input-group .form-control{width: 70%;}
-#address .input-group p { float: left; width:70%;height:44px;line-height: 16px; display: inline-block; padding:10px 20px; }
+#address .input-group p { float: left; width:70%;height:47px;line-height: 16px; display: inline-block; padding:10px 20px; }
 #address .text-left { display: block; padding-top: 40px; }
-#address .btn-custom-1 { font-size:0.9em!important;color: #777;width:50px;background-color: #f2f2f2; border-color: #e4e2e2; padding: 10px 0;text-align: center;; margin-left: 5px; }
+#address .btn-custom-1 { font-size:0.9em!important;color: #777;width:50px;background-color: #f2f2f2; border-color: #e4e2e2; padding: 12px 0;text-align: center;; margin-left: 5px; }
 #address .btn-custom-3:hover { -webkit-box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.4); box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.4); background-color: #f858b7; }
-form#patchthisaddressbook_2 {float: left;}
+
 @media (min-width: 1041px) and (max-width: 1200px) {
 #address { padding: 20px 60px; }
 }
@@ -161,11 +161,13 @@ form#patchthisaddressbook_2 {float: left;}
 #address p { padding-top: 20px; }
 #address .input-group .input-group-addon { height: 30px;}
 #address .input-group .form-control {width: 100%;}
-#address .input-group {  margin-bottom: 10px; }
+#address .input-group {  margin-bottom: 55px; }
 #address .input-group p { width:100%;}
 #address { padding: 10px 10px; overflow: hidden; }
-.addEdit, .addDelete { float: left; }
-#address .btn-custom-1 { margin-left: 5px;  }
+.addEdit, .addDelete { float: left; top: 50px; }
+#address .btn-custom-1 { margin-left: 5px; position: absolute;}
+#address .addEdit { right: 0; }
+#address .addDelete { right: 55px; }
 #address .input-group .input-group-addon { width: 80px; min-width: 80px; padding: 0px 4px; }
 #address .btn-custom-3 { display: block; clear: both; width:120px;}
 form#patchthisaddressbook_2 {float: none;}
