--- a/public/css/pageProduct.css
+++ b/public/css/pageProduct.css
@@ -9,11 +9,12 @@ h3.title span { font: 0.8em Helvetica, Microsoft JhengHei, "微軟正黑體"!imp
 #product-image-container { overflow:hidden;width: 100%; max-width: 560px;position:relative;height:100%;max-height:560px; }
 #product-image-container img{height:auto;width: 100%;}
 #product-image-container:hover #zoom{display:none;}
+#product-carousel{text-align: center;}
 #zoom { background-image: url(../images/img_zoom.png); height: 40px; width: 40px; position: absolute; right: 0px; bottom: 0px; display: block;z-index:900; }
 #product-image-carousel-container { width: 100%; max-width: 560px; margin-right: 0px; padding: 20px 0 0 0; float: none; overflow: hidden; clear:both;}
 #product-image-carousel-container li { display: inline-block; margin-left: 2%; width: 15%; max-width: 90px;max-height:90px; white-space: nowrap;}
 #product-image-carousel-container li.markLi { margin-left: 0px; }
-#product-image-carousel-container li img{max-height:90px;height: 100%;}
+#product-image-carousel-container li img{max-height:90px;height: 100%;border:2px solid transparent;}
 .col-md-6.col-sm-12.col-xs-12.product { width: 47%; }
 .product .product-name { font: normal 1.3em Helvetica, Microsoft JhengHei, "微軟正黑體"!important; color: #FFF; color: #FFF; }
 #prodTop .title span { font: normal 1.1em Helvetica, Microsoft JhengHei, "微軟正黑體"!important; padding: 0 0 0 0!important; display: block; }
@@ -48,7 +49,7 @@ label { color: #FFF; }
 .favDelete { width: 32px; height: 32px; background-image: url(../images/icon_close.png); display: block; position: absolute; right: -5px; top: 0; visibility: hidden; background-position: 0px -20px; }
 .favDelete:hover { background-position: -40px -20px; }
 .item:hover > .item-image-container .favDelete { visibility: visible; }
-
+.prodCon img{padding:10px 0;}
 @media (min-width: 992px) and (max-width: 1300px) {
 #prodTop .container { width: 100%; }
 .bgFav { top: 65px; }
@@ -91,8 +92,8 @@ h2.title { background: none; }
 .cloud-zoom-lens {margin:0px;background-color:#fff;cursor:move;}
 .cloud-zoom-big { overflow: hidden; margin-top: 4px; margin-left: 4px; border: 1px solid #000;max-height: 560px; }
 .cloud-zoom-loading {color:white;background:#222;padding:0px;}
-.zoom-tiny-image:hover{border:1px solid #c9006e;}
-.active-slide{border:2px solid #c9006e;}
+.zoom-tiny-image:hover{border:2px solid #c9006e!important;}
+img.active-slide{border:2px solid #c9006e!important;}
 .mousetrap{max-height: 560px;}
 #zoom1{max-height: 560px;}
 @media (max-width: 767px) {
