--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 <head>
   <meta charset="utf-8">
   <title>Ladyboo</title>
+  
+  <%= yield :meta_area %>
   <meta name="description" content="Responsive modern ecommerce Html5 Template">
   <!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
