--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,14 +1,15 @@
 <link rel="stylesheet" href="/css/pageProduct.css">
 
 <% content_for :meta_area do %>
-  <meta name="og:title" content="<%= "#{@product.name}" %>">
-  <meta name="og:site_name" content="Ladyboo">
-  <meta name="og:description" content="<%= "#{@product.name}#{@product.en_name}" %>">
+
+  <meta property="og:title" content="<%= "#{@product.name}" %>">
+  <meta property="og:site_name" content="Ladyboo">
+  <meta property="og:description" content="<%= "#{@product.name}#{@product.en_name}" %>">
   <% if @product.galleries.where(type: 'ProductPhotoGallery').first %>
-    <meta name="og:image" content="<%= @product.galleries.where(type: 'ProductPhotoGallery').first.attachment.url %>">
+    <meta property="og:image" content="<%= @product.galleries.where(type: 'ProductPhotoGallery').first.attachment.url %>">
   <% end %>
-  <meta name="og:url" content="<%= category_product_url(@product.category, @product) %>">
-  <meta name="fb:app_id" content="380171498811984">
+  <meta property="og:url" content="<%= category_product_url(@product.category, @product) %>">
+  <meta property="fb:app_id" content="380171498811984">
   
 <% end %>
 
