test multiple like btn on same page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,10 +6,11 @@
   <meta property="og:site_name" content="Ladyboo">
   <meta property="og:description" content="<%= "#{@product.name}#{@product.en_name}" %>">
   <% if @product.galleries.where(type: 'ProductPhotoGallery').first %>
-    <meta property="og:image" content="<%= @product.galleries.where(type: 'ProductPhotoGallery').first.attachment.url %>">
+    <meta property="og:image" content="<%= image_url(@product.galleries.where(type: 'ProductPhotoGallery').first.attachment.url) %>">
   <% end %>
   <meta property="og:url" content="<%= category_product_url(@product.category, @product) %>">
   <meta property="fb:app_id" content="380171498811984">
+  <meta property="og:type" content="website" />
   
 <% end %>
 
