--- a/app/views/layouts/_front_shared_footer.html.erb
+++ b/app/views/layouts/_front_shared_footer.html.erb
@@ -11,12 +11,10 @@
 
         <div class="col-md-6 col-sm-10 col-xs-12 footer-text-container">
           <p>
+            <div class="fb-like" data-href="<%= root_url %>" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
             <%= link_to "隱私權聲明 PRIVACY", page_pages_path("privacy") %>
             <%= link_to "服務條款 TERMS & CONDITIONS", page_pages_path("terms") %>
           </p>
-
-          <div class="" data-href="<%= root_url %>" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
-          
         </div>
       </div><!-- End .row --> 
     </div><!-- End .container --> 
