--- a/app/views/topic_collections/show.html.erb
+++ b/app/views/topic_collections/show.html.erb
@@ -2,6 +2,20 @@
 <link rel="stylesheet" href="/css/prodList.css">
 <script src="/js/side.js"></script> 
 
+<% content_for :meta_area do %>
+
+  <meta property="og:title" content="<%= "#{@topic.name}" %>">
+  <meta property="og:site_name" content="Ladyboo">
+  <meta property="og:description" content="<%= "#{@topic_collection.name} #{@topic.name}" %>">
+  <% if @topic.galleries.where(type: 'TopicBannerGallery').first %>
+    <meta property="og:image" content="<%= image_url(@topic.galleries.where(type: 'TopicBannerGallery').first.attachment.url) %>">
+  <% end %>
+  <meta property="og:url" content="<%= topic_collection_url(@topic_collection) %>">
+  <meta property="fb:app_id" content="380171498811984">
+  <meta property="og:type" content="website" />
+  
+<% end %>
+
 <% content_for :breadcrumb do %>
   <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'Collection', 'javascript:void(0);' %>
   &nbsp; > &nbsp; <%= link_to "#{@topic_collection.name} #{@topic.name}", 'javascript:void(0);' %>
