--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,11 @@
   <title>Ladyboo</title>
   
   <%= yield :meta_area %>
-  
-  <meta property="description" content="現在就試試看吧，加一點蕾絲，特調妳的性感甜美比例，妳將發現自己不同以往的美，多了新鮮想像，開始讓人著迷。">
+
+  <meta property="og:site_name" content="Ladyboo">
+  <meta property="fb:app_id" content="380171498811984">
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="現在就試試看吧，加一點蕾絲，特調妳的性感甜美比例，妳將發現自己不同以往的美，多了新鮮想像，開始讓人著迷。">
   <!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
