--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -4,15 +4,13 @@
 
 <% content_for :meta_area do %>
 
-  <meta property="og:title" content="<%= "#{@topic.name}" %>">
-  <meta property="og:site_name" content="Ladyboo">
-  <meta property="og:description" content="<%= "#{@lookbook.name} #{@topic.name}" %>">
+  <meta property="og:title" content="<%= "#{@lookbook.name} #{@topic.name}" %>">
+  
   <% if @topic.galleries.where(type: 'TopicBannerGallery').first %>
     <meta property="og:image" content="<%= image_url(@topic.galleries.where(type: 'TopicBannerGallery').first.attachment.url) %>">
   <% end %>
   <meta property="og:url" content="<%= lookbook_topic_url(@lookbook, @topic) %>">
-  <meta property="fb:app_id" content="380171498811984">
-  <meta property="og:type" content="website" />
+  
   
 <% end %>
 
