--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -33,8 +33,8 @@
   <link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
 
   <!--[if lt IE 9]>
-    <script src="//js/html5shiv.js"></script>
-    <script src="//js/respond.min.js"></script>
+    <script src="/js/html5shiv.js"></script>
+    <script src="/js/respond.min.js"></script>
   <![endif]-->
 
 
