--- a/app/views/layouts/admin_sign_in.html.erb
+++ b/app/views/layouts/admin_sign_in.html.erb
@@ -8,10 +8,15 @@
 <meta name="Robots" content="index,follow"/>
 <meta http-equiv="content-language" content="zh-TW" />
 <title>LadyBoo 後台管理系統</title>
+
+<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<%= csrf_meta_tags %>
+
 <link rel="stylesheet" href="/css/admin/reset.css">
 <!--link rel="stylesheet" href="/css/admin/global.css"-->
 <link rel="stylesheet/less" type="text/css" href="/css/admin/login.less" />
-<script src="/js/admin/jquery.min.js"></script>
+
 <script src="/js/admin/less.min.js"></script>
 <script src="/js/admin/global.js"></script>
 </head>
