--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :meta_area do %>
 
-  <meta property="og:title" content="<%= "#{@lookbook.name} #{@topic.name}" %>">
+  <meta property="og:title" content="<%= "#{@lookbook.name} #{@topic.name} - LadyBoo" %>">
   
   <% if @topic.galleries.where(type: 'TopicBannerGallery').first %>
     <meta property="og:image" content="<%= image_url(@topic.galleries.where(type: 'TopicBannerGallery').first.attachment.url) %>">
