--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,10 +5,9 @@
   <meta property="og:title" content="<%= "#{@product.name}#{@product.en_name} - LadyBoo" %>">
 
   <% if @product.galleries.where(type: 'ProductPhotoGallery').first %>
-    <meta name="og:image" content="<%= @product.galleries.where(type: 'ProductPhotoGallery').first.attachment.url %>">
+    <meta property="og:image" content="<%= @product.galleries.where(type: 'ProductPhotoGallery').first.attachment.url %>">
   <% end %>
   <meta name="og:url" content="<%= category_product_url(@product.category, @product) %>">
-  <meta name="fb:app_id" content="380171498811984">
   
 <% end %>
 
