add stock return btn

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   
   <%= yield :meta_area %>
 
-  <%= render 'layout/fb_shared_meta' %>
+  <%= render 'layouts/fb_shared_meta' %>
 
   <!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
