--- a/app/views/admin/stocks/index.html.erb
+++ b/app/views/admin/stocks/index.html.erb
@@ -90,7 +90,11 @@
 
       </table>
     </div><!--form-->
-
+    <div class="button"> 
+      <%= link_to admin_category_path(@product.category) , class: 'left' do %>
+        <img src="/images/admin/left.png">返回
+      <% end %>
+    </div>
 </article>
 
 
